<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/preferencesLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <Button
        android:id="@+id/backgroundColorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding6dp"
        android:layout_weight="1"
        android:onClick="updateBackgroundColor"
        android:text="@string/background_color" />
       
    <Button
        android:id="@+id/fontSizeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding6dp"
        android:layout_weight="1"
        android:onClick="updateFontSize"
        android:text="@string/font_size" />
    
    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding6dp"
        android:layout_weight="1"
        android:onClick="returnToMain"
        android:text="@string/return_title" />


</LinearLayout>
